software-center (3.1.13) UNRELEASED; urgency=low

  * softwarecenter/view/appdetailsview_gtk.py:
    - fix crash in _on_transaction_started (LP: #708974)
  * softwarecenter/view/widgets/mkit.py:
    - handle case where the pango layout has no attributes,
      fixes broken carousel paging dots (LP: #708919)

 -- Gary Lasker <gary.lasker@canonical.com>  Fri, 28 Jan 2011 00:28:56 -0500

software-center (3.1.12) natty; urgency=low

  * merged lp:~mvo/software-center/trunk-reviews, this adds ratings
    and reviews

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Jan 2011 20:48:06 +0100

software-center (3.1.11) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/widgets/spinner.py:
    - modify to allow updating spinner label text on the fly
  * software-center,
    softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/softwarepane.py:
    - defer loading the categories pane in the main view and display
      a spinner while it's loading, provides further startup time
      improvement
  * test/test_gui_buy_something.py:
    - fix test case
  * softwarecenter/app.py,
    softwarecenter/view/historypane.py:
    - connect app-list-changed signal handlers after each pane's
      view is fully initialized to insure correct status bar
      updating (fixes failure in test_supported_only test case)
  * softwarecenter/app.py:
    - fix unexpected switch back to the details view if the backspace
      key is pressed during the purchase process (LP: #705676)
  * softwarecenter/apt/aptcache.py,
    softwarecenter/view/availablepane.py:
    - defer opening the apt cache until we initialize the availablepane
      view, provides a nice startup time boost
  * test/test_appview.py,
    test/test_gui_buy_something.py,
    test/test_software_channels.py:
    - update test cases for deferred apt cache open

  [ Michael Vogt ]
  * add support for libproxy
  * softwarecenter/view/widgets/imagedialog.py: